fixing block one mobile image resolution on mobile

--- a/src/components/BlockOne/BlockOne.css
+++ b/src/components/BlockOne/BlockOne.css
@@ -379,6 +379,6 @@
   }
 
   .blockone-imgtwo {
-    height: 550px;
+    height: 560px;
   }
 }
